err/digsandpaper.err
Listing '.'...
Listing './bin'...
Compiling './bin/jsonpath.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_API-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Cors-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/digsandpaper'...
Listing './lib/python3.5/site-packages/digsandpaper/coarse'...
Listing './lib/python3.5/site-packages/digsandpaper/coarse/execute'...
Compiling './lib/python3.5/site-packages/digsandpaper/coarse/execute/execute_query_component.py'...
***   File "./lib/python3.5/site-packages/digsandpaper/coarse/execute/execute_query_component.py", line 43
    print "tearing down connection"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digsandpaper/coarse/generate'...
Listing './lib/python3.5/site-packages/digsandpaper/coarse/parameterize'...
Listing './lib/python3.5/site-packages/digsandpaper/coarse/preprocess'...
Listing './lib/python3.5/site-packages/digsandpaper/elasticsearch_indexing'...
Listing './lib/python3.5/site-packages/digsandpaper/elasticsearch_mapping'...
Listing './lib/python3.5/site-packages/digsandpaper/fine'...
Compiling './lib/python3.5/site-packages/digsandpaper/main.py'...
***   File "./lib/python3.5/site-packages/digsandpaper/main.py", line 71
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/digsandpaper-0.1.4.post59.egg-info'...
Listing './lib/python3.5/site-packages/elasticsearch'...
Listing './lib/python3.5/site-packages/elasticsearch/client'...
Listing './lib/python3.5/site-packages/elasticsearch/connection'...
Listing './lib/python3.5/site-packages/elasticsearch/helpers'...
Listing './lib/python3.5/site-packages/elasticsearch-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/elasticsearch_dsl'...
Listing './lib/python3.5/site-packages/elasticsearch_dsl-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_api'...
Listing './lib/python3.5/site-packages/flask_api/static'...
Listing './lib/python3.5/site-packages/flask_api/static/css'...
Listing './lib/python3.5/site-packages/flask_api/static/img'...
Listing './lib/python3.5/site-packages/flask_api/static/js'...
Listing './lib/python3.5/site-packages/flask_api/templates'...
Listing './lib/python3.5/site-packages/flask_api/tests'...
Listing './lib/python3.5/site-packages/flask_cors'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonpath_rw'...
Listing './lib/python3.5/site-packages/jsonpath_rw/bin'...
Listing './lib/python3.5/site-packages/jsonpath_rw-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext/tests'...
Listing './lib/python3.5/site-packages/jsonpath_rw_ext-1.1.3.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/coarse'...
Listing './lib/python3.5/site-packages/test/coarse/execute'...
Listing './lib/python3.5/site-packages/test/coarse/generate'...
Listing './lib/python3.5/site-packages/test/coarse/parameterize'...
Listing './lib/python3.5/site-packages/test/coarse/preprocess'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
